# tuo

./: .env  .gitignore  Cargo.toml
crates/tuo-core/: Cargo.toml
crates/tuo-core/src/: lib.rs
crates/tuo-core/src/core/agency/: agent.rs  profile.rs  tool.rs
crates/tuo-core/src/core/agency/project/: project.rs  project_assistant.rs  project_director.rs
crates/tuo-core/src/core/indexing/: index.rs  index_metadata.rs  mod.rs
crates/tuo-core/src/core/messaging/: content.rs  memory.rs  message.rs  mod.rs
crates/tuo-core/src/core/prompting/: mod.rs  prompt.rs  prompt_template.rs
crates/tuo-core/src/core/source/: document.rs  mod.rs  node.rs  section.rs  sources.rs
crates/tuo-core/src/embedding/: embedder.rs  embeddings.rs  mod.rs
crates/tuo-core/src/extraction/: reader.rs
crates/tuo-core/src/model/: mod.rs  model.rs  model_metadata.rs
crates/tuo-core/src/parsing/: document_parser.rs  mod.rs
crates/tuo-core/src/query/: drafter.rs  engine.rs  examiner.rs
crates/tuo-core/src/retrieval/: mod.rs  post_processor.rs  retriever.rs  router.rs  search_result.rs
crates/tuo-core/src/storage/: mod.rs  store.rs  store_metadata.rs
crates/tuo-core/src/utility/: mod.rs  splitters.rs  token.rs
crates/tuo-parts/: Cargo.toml  build.rs
crates/tuo-parts/src/: lib.rs
crates/tuo-parts/src/messaging/: message_util_traits.rs  mod.rs
crates/tuo-parts/src/models/: mod.rs  open_ai.rs
crates/tuo-parts/src/models/ollama/: chat.rs  embedder.rs  mod.rs  models.rs  test.rs
crates/tuo-parts/src/models/openai/: chat.rs  embedder.rs  mod.rs  models.rs  test.rs
crates/tuo-parts/src/parsers/: doc_parser.rs  mod.rs
crates/tuo-parts/src/query/: query_engine.rs
crates/tuo-parts/src/readers/: mod.rs  pdf_reader.rs  uni_folder_reader.rs  uni_reader.rs  uni_reader_provider.rs
crates/tuo-parts/src/stores/: mod.rs
crates/tuo-parts/src/stores/lancedb/: index.rs  mod.rs  schema.rs  store.rs
crates/tuo-shared/: Cargo.toml
crates/tuo-shared/src/: lib.rs
crates/tuo-shared/src/consts/: defaults.rs
crates/tuo-shared/src/errors/: core.rs  mod.rs  parts.rs  tuo.rs  utils.rs
crates/tuo-shared/src/errors/openai/: open_ai.rs
crates/tuo-shared/src/errors/store/: lancedb.rs  mod.rs
crates/tuo-shared/src/types/: mod.rs  return_type.rs
crates/tuo-utils/: Cargo.toml
crates/tuo-utils/src/: lib.rs
crates/tuo-utils/src/datetime/: timestamp.rs
crates/tuo-utils/src/fs/: file_name_sanitizer.rs  file_type.rs  folder.rs  mod.rs
crates/tuo-utils/src/hash/: hash_str.rs
crates/tuo-utils/src/testing/: mod.rs
docs/: package-lock.json
examples/custom-entities/: Cargo.toml
examples/custom-entities/src/: custom_workflow.rs  lib.rs  query_engine.rs  reader.rs  store.rs
examples/simple/: Cargo.toml
examples/simple/src/: default_workflow.rs  main.rs  main_test.rs  simple_oneshot.rs
src/: lib.rs
tuo-core/: Cargo.toml
tuo-core/src/: error.rs  lib.rs
tuo-core/src/agency/: agent.rs
tuo-core/src/core/: mod.rs
tuo-core/src/core/agency/: agent.rs  mod.rs  profile.rs  tool.rs
tuo-core/src/core/agency/project/: mod.rs  project.rs  project_assistant.rs  project_director.rs
tuo-core/src/core/generation/: generated_content.rs  mod.rs
tuo-core/src/core/indexing/: index.rs
tuo-core/src/core/messaging/: memory.rs  message.rs  mod.rs
tuo-core/src/core/prompting/: mod.rs  prompt.rs  prompt_context.rs  prompt_template.rs
tuo-core/src/core/source/: document.rs  mod.rs  node.rs  section.rs
tuo-core/src/embedding/: embedder.rs  embeddings.rs  mod.rs
tuo-core/src/entities/: document.rs  mod.rs  node.rs  section.rs
tuo-core/src/extraction/: reader.rs
tuo-core/src/model/: model.rs
tuo-core/src/query/: drafter.rs  engine.rs  examiner.rs  mod.rs
tuo-core/src/retrieval/: mod.rs  post_processor.rs  retriever.rs  router.rs
tuo-core/src/storage/: store.rs
tuo-core/src/tooling/: tool.rs
tuo-core/src/traits/: reader.rs
tuo-core/src/types/: date_time.rs
tuo-core/src/utility/: fs.rs  mod.rs  splitters.rs
tuo-core/src/utils/: datetime.rs
tuo-examples/custom-entities/: Cargo.toml
tuo-examples/custom-entities/src/: lib.rs  query_engine.rs  store.rs
tuo-examples/simple/: Cargo.toml
tuo-examples/simple/src/: custom_workflow.rs  default_workflow.rs  main.rs
tuo-examples/simple_rag/: Cargo.toml
tuo-examples/simple_rag/src/: lib.rs  main_test.rs
tuo-parts/: Cargo.toml
tuo-parts/src/: lib.rs
tuo-parts/src/messaging/: message_util_traits.rs
tuo-parts/src/models/: mod.rs  open_ai.rs
tuo-parts/src/query/: query_engine.rs
tuo-parts/src/readers/: mod.rs  pdf_reader.rs  uni_folder_reader.rs  uni_reader_provider.rs  uni_reader_test.rs  universal_reader.rs  universal_reader_test.rs
tuo-parts/src/stores/: mod.rs  query_engine.rs  store.rs
tuo-utils/: Cargo.toml
tuo-utils/src/: error.rs
tuo-utils/src/fs/: file_type.rs
