[package]
name = "tuo"
version = "0.0.1"
edition = "2021"



[dependencies]
tuo-core = { path = "tuo-core" }
tuo-parts = { path = "tuo-parts" }
tuo-utils = { path = "tuo-utils" }

[workspace]
members = [
    "tuo-core",
    "tuo-parts",
    "tuo-utils",
    "tuo-examples/simple",
    "tuo-examples/custom-entities"
]

default-members = [
    "tuo-core",
    "tuo-parts",
    "tuo-utils",
    "tuo-examples/simple",
    "tuo-examples/custom-entities"
]


[features]

[workspace.dependencies]
async-trait = "0.1.77"
thiserror = "1.0.57"
mime_guess2 = "2.0.5"
tracing = "0.1.40"
uuid = { version = "1.7.0", features = ["v4"] }
tokio = { version = "1.0.2", features = ["rt", "macros", "sync"] }
chrono = "0.4.34"
regex = "1.10.3"
once_cell = "1.19.0"
async-openai = "0.18.3"
lancedb = "0.4.11"
tokio-test = "0.4.3"
dotenv = "0.15.0"
test-log = { version = "0.2.15", features = ["trace"] }

