[package]
name = "tuo"
version = "0.0.1"
edition = "2021"
readme = "README.md"



[dependencies]
tuo-core = { path = "crates/tuo-core" }
tuo-parts = { path = "crates/tuo-parts" }
tuo-utils = { path = "crates/tuo-utils" }
tuo-shared = { path = "crates/tuo-shared" }

[workspace]
members = [
    "crates/*",
    "examples/*",
]

default-members = [
    "crates/tuo-core",
    "crates/tuo-parts",
    "crates/tuo-utils",
    "examples/*",
]


[features]

[workspace.dependencies]
# Internal dependencies
tuo = { path = "." }
tuo-core = { path = "crates/tuo-core" }
tuo-parts = { path = "crates/tuo-parts" }
tuo-utils = { path = "crates/tuo-utils" }
tuo-shared = { path = "crates/tuo-shared" }
tuo-examples = { path = "examples" }


# External dependencies

## Dev
async-trait = "0.1.77"
thiserror = "1.0.57"
mime_guess2 = "2.0.5"
dotenv = "0.15.0"
test-log = { version = "0.2.15", features = ["trace"] }
tracing = "0.1.40"
uuid = { version = "1.7.0", features = ["v4"] }
tokio = { version = "1.0.2", features = ["rt", "macros", "sync"] }
chrono = "0.4.34"
regex = "1.10.3"
once_cell = "1.19.0"
tokio-test = "0.4.3"
typed-builder = "0.18.1"
futures = { version = "0.3.30", default-features = false }
strum = { version = "0.26.1", features = ["derive"] }
blake3 = "1.5.0"
field_types = "1.1.0"
dyn-clone = "1.0.17"

## Parts
lancedb = { version = "0.4.12", default-features = false }
async-openai = "0.19.0"
ollama-rs = "0.1.7"
arrow-schema = "50.0.0"
arrow-array = "50.0.0"
arrow2_convert = "0.5.0"
backoff = { version = "0.4.0", features = ["tokio"] }

## RAG
tiktoken-rs = "0.5.8"
## Utils
sanitize-filename = "0.5.0"