[package]
name = "tuo-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }
mime_guess2 = { workspace = true }
tuo-utils = { path = "../tuo-utils" }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
once_cell = {workspace = true}
regex = {workspace = true}