[package]
name = "tuo-parts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tuo-core = { path = "../tuo-core" }
uuid = { workspace = true }

async-trait = { workspace = true }
tokio = { workspace = true }
async-openai = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
test-log =  { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
dotenv = { workspace = true }