[package]
name = "tuo-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Internal
tuo-utils.workspace = true
tuo-shared.workspace = true

# External
async-trait = { workspace = true }
thiserror = { workspace = true }
mime_guess2 = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
once_cell = {workspace = true}
regex = {workspace = true}
field_types.workspace = true
strum.workspace = true
typed-builder.workspace = true
tiktoken-rs = "0.5.8"