[package]
name = "tuo-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono.workspace = true
thiserror.workspace = true
tuo-shared.workspace = true
blake3.workspace = true
sanitize-filename.workspace = true
uuid.workspace = true

mime_guess2 = {workspace = true}