[package]
name = "simple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tuo = { path = "../.." }

tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }

custom-entities = { path = "../custom-entities" }
